--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -91,8 +91,9 @@ workflows:
       events:
         - pull_request
       branch_patterns:
-        - pattern: "*"
-          include: true
+        - pattern: "exclude-all-branches"
+          include: false
+          source: false
     cache:
       cache_paths:
         - ~/.gradle/caches
@@ -200,8 +201,9 @@ workflows:
       events:
         - pull_request
       branch_patterns:
-        - pattern: "*"
-          include: true
+        - pattern: "exclude-all-branches"
+          include: false
+          source: false
     cache:
       cache_paths:
         - ~/.gradle/caches
