--- a/.github/workflows/run-c-check.yml
+++ b/.github/workflows/run-c-check.yml
@@ -9,8 +9,18 @@ jobs:
     if: |
       github.event.issue.pull_request &&
       contains(github.event.comment.body, '#RunCheck')
-
     steps:
+      - name: Check Secrets Exist
+        run: |
+          if [ -z "$CODEMAGIC_API_TOKEN" ]; then
+            echo "Error: CODEMAGIC_API_TOKEN is not set!"
+            exit 1
+          fi
+          if [ -z "$CODEMAGIC_APP_ID" ]; then
+            echo "Error: CODEMAGIC_APP_ID is not set!"
+            exit 1
+          fi
+          echo "Secrets are set (values hidden for security)."
       - name: Extract PR Source Branch
         id: extract-branch
         env:
@@ -30,8 +40,6 @@ jobs:
           CODEMAGIC_APP_ID: ${{ secrets.CODEMAGIC_APP_ID }}
         run: |
           # Use -f to make curl exit with a non-zero status code on HTTP error
-          echo "$CODEMAGIC_API_TOKEN"
-          echo "$CODEMAGIC_APP_ID"
           RESPONSE=$(curl -s -o /dev/null -w "%{http_code}" \
             -X POST \
             -H "Content-Type: application/json" \
