--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -119,6 +119,7 @@ workflows:
           failure: true
   comprehensive-check:
     name: Comprehensive Check
+    instance_type: linux_x2
     environment:
       groups:
         - notification_emails
@@ -225,6 +226,7 @@ workflows:
           failure: true
   periodic-check:
     name: Periodic Check
+    instance_type: mac_mini_m2
     environment:
       groups:
         - notification_emails
