--- a/.github/workflows/run_c_check.yml
+++ b/.github/workflows/run_c_check.yml
@@ -21,7 +21,7 @@ jobs:
             "https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER")
 
           BRANCH_NAME=$(echo "$PR_JSON" | jq -r '.head.ref')
-
+          echo "BRANCH: $BRANCH_NAME"
       - name: Trigger Codemagic on Source Branch
         env:
           CODEMAGIC_API_TOKEN: ${{ secrets.CODEMAGIC_API_TOKEN }}
