--- a/.github/workflows/run_c_check.yml
+++ b/.github/workflows/run_c_check.yml
@@ -35,7 +35,7 @@ jobs:
             -d '{
               "appId": "'"$CODEMAGIC_APP_ID"'",
               "workflowId": "comprehensive-check",
-              "branch": "'"feature/test"'"
+              "branch": "'"$BRANCH_NAME"'"
             }' \
             "https://api.codemagic.io/builds"
           )
