--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -131,10 +131,7 @@ workflows:
       cache_paths:
         - ~/.gradle/caches
         - ~/.pub-cache
-        - ios/Pods
         - $FLUTTER_ROOT/.pub-cache
-        - /usr/local/Homebrew
-        - /usr/local/bin/lcov
     scripts:
       - name: Clone and Checkout
         script: |
@@ -152,19 +149,19 @@ workflows:
 
       - name: Run Unit Tests With Coverage Report
         script: |
-          TARGET = $ARC_CODE_COVERAGE_TARGET
+          TARGET=$ARC_CODE_COVERAGE_TARGET
           if git log -1 --pretty=%B | grep -Eq "#DeltaCoverageLow|DCL"; then
-            TARGET = $CODE_COVERAGE_MINIMUM
+            TARGET=$CODE_COVERAGE_MINIMUM
             echo "Using minimum coverage target: ${TARGET}% "
           fi
-          HOMEBREW_NO_AUTO_UPDATE=1 brew install lcov
+          sudo apt-get install -y lcov
           mkdir -p test-results 
           flutter test test/units --coverage --machine > test-results/flutter.json
           # Compute coverage
           LF=$(grep -m1 '^LF:' coverage/lcov.info | cut -d':' -f2)
           LH=$(grep -m1 '^LH:' coverage/lcov.info | cut -d':' -f2)
           COVERAGE_PERCENT=$(echo "scale=2; $LH*100/$LF" | bc)
-        
+          
           echo "Code Coverage: ${COVERAGE_PERCENT}% "
           
           if (( $(echo "$COVERAGE_PERCENT < $TARGET" | bc -l) )); then
@@ -205,7 +202,6 @@ workflows:
 
     artifacts:
       - build/**/outputs/**/*.apk
-      - build/ios/ipa/*.ipa
       - coverage/*
       - test-results/flutter.json
       - mutation-test-report/*
@@ -224,12 +220,13 @@ workflows:
           failure: true
   periodic-check:
     name: Periodic Check
-    instance_type: mac_mini_m2
+    instance_type: linux_x2
     environment:
       groups:
         - notification_emails
         - ripple_arc
       flutter: 3.29.2
+      ubuntu: 24.04
     cache:
       cache_paths:
         - ~/.gradle/caches
@@ -285,7 +282,7 @@ workflows:
 
       - name: Run Screenshot Tests
         script: |
-          flutter test test/screenshots --update-goldens
+          flutter test test/screenshots
 
       - name: Mutation Testing
         script: |
@@ -303,16 +300,106 @@ workflows:
         script: |
           flutter build apk --debug
 
-      - name: Build iOS Debug
-        script: |
-          flutter build ios --debug --no-codesign
-
     artifacts:
       - build/**/outputs/**/*.apk
       - build/ios/ipa/*.ipa
       - coverage/*
       - test-results/flutter.json
       - mutation-test-report/*
+    publishing:
+      email:
+        recipients:
+          - $EMAIL_DANIEL
+        notify:
+          success: true
+          failure: true
+      slack:
+        channel: '#build-notifications'
+        notify_on_build_start: true
+        notify:
+          success: true
+          failure: true
+  build-ios-debug:
+    name: Build Ios Debug
+    instance_type: mac_mini_m2
+    environment:
+      groups:
+        - notification_emails
+        - ripple_arc
+      flutter: 3.29.2
+    cache:
+      cache_paths:
+        - ~/.pub-cache
+        - ios/Pods
+        - $FLUTTER_ROOT/.pub-cache
+        - /usr/local/Homebrew
+    scripts:
+      - name: Clone and Checkout
+        script: |
+          git clone $CM_REPO_URL .
+          git checkout $BASE_BRANCH
+
+      - name: Install Dependencies
+        script: |
+          echo "Downloading Dependencies..."
+          flutter pub get
+
+      - name: Run Code Analysis
+        script: |
+          echo "🛠️ Running Flutter analysis..."
+          flutter analyze --fatal-infos --fatal-warnings .
+
+      - name: Run Unit Tests With Coverage Report
+        script: |
+          TARGET = $ARC_CODE_COVERAGE_TARGET
+          if git log -1 --pretty=%B | grep -Eq "#DeltaCoverageLow|DCL"; then
+            TARGET = $CODE_COVERAGE_MINIMUM
+            echo "Using minimum coverage target: ${TARGET}% "
+          fi
+          HOMEBREW_NO_AUTO_UPDATE=1 brew install lcov
+          mkdir -p test-results 
+          flutter test --tags=units --coverage --machine > test-results/flutter.json
+          # Compute coverage
+          LF=$(grep -m1 '^LF:' coverage/lcov.info | cut -d':' -f2)
+          LH=$(grep -m1 '^LH:' coverage/lcov.info | cut -d':' -f2)
+          COVERAGE_PERCENT=$(echo "scale=2; $LH*100/$LF" | bc)
+
+          echo "Code Coverage: ${COVERAGE_PERCENT}% "
+
+          if (( $(echo "$COVERAGE_PERCENT < $TARGET" | bc -l) )); then
+            echo "❌ Coverage is $COVERAGE_PERCENT%, below $ARC_CODE_COVERAGE_TARGET%"
+            exit 1
+          else
+            echo "✅ Coverage is $COVERAGE_PERCENT% (>= $ARC_CODE_COVERAGE_TARGET%)"
+          fi
+        test_report: test-results/flutter.json
+
+      - name: Run Widget Tests
+        script: |
+          flutter test test/widgets
+
+      - name: Run Screenshot Tests
+        script: |
+          flutter test test/screenshots
+
+      - name: Mutation Testing
+        script: |
+          CHANGED_FILES=$(git diff --name-only HEAD HEAD~1 | grep -v "^test" | grep ".dart$" | tr '\n' ' ')
+          # Check if CHANGED_FILES is empty
+          if [ -z "$CHANGED_FILES" ]; then
+            echo "No changed Dart files detected. Skipping mutation tests."
+            exit 0
+          else
+            echo "Running mutation tests on: $CHANGED_FILES"
+            dart run mutation_test $CHANGED_FILES --rules=mutation_test_rules.xml
+          fi
+
+      - name: Build Android Debug
+        script: |
+          flutter build apk --debug
+
+    artifacts:
+      - build/ios/ipa/*.ipa
     publishing:
       email:
         recipients:
