--- a/.github/workflows/run_c_check.yml
+++ b/.github/workflows/run_c_check.yml
@@ -49,3 +49,29 @@ jobs:
           else
             echo "Codemagic triggered successfully with HTTP status $RESPONSE."
           fi
+      - name: Trigger Ios Debug Build on Source Branch
+        env:
+          CODEMAGIC_API_TOKEN: ${{ secrets.CODEMAGIC_API_TOKEN }}
+          CODEMAGIC_APP_ID: ${{ secrets.CODEMAGIC_APP_ID }}
+        run: |
+          # Capture the actual response body for debugging
+          FULL_RESPONSE=$(curl -s \
+            -X POST \
+            -H "Content-Type: application/json" \
+            -H "x-auth-token: $CODEMAGIC_API_TOKEN" \
+            -d '{
+              "appId": "'"$CODEMAGIC_APP_ID"'",
+              "workflowId": "ios-debug-build",
+              "branch": "'"${{ steps.extract-branch.outputs.branch_name }}"'"
+            }' \
+            "https://api.codemagic.io/builds"
+          )
+
+          echo "Full API response: $FULL_RESPONSE"
+
+          if [ "$RESPONSE" -ne 200 ]; then
+            echo "Error: Received HTTP status $RESPONSE from Codemagic API."
+            exit 1
+          else
+            echo "Codemagic triggered successfully with HTTP status $RESPONSE."
+          fi
