#CA-11 Chore: Update .gitignore and remove old scripts

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,6 @@ pr_review_for_claude.txt
 !.env.template
 mutation_test_rules.xml
 .cursorandroid/build/
-
+devtools_options.yaml
 # Cursor editor
 .cursor/
