--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,13 +45,8 @@ flutter:
   
   assets:
     # Environment files
-    - .env.prod
-    - .env.dev
-    - .env.qa
-    
-    - assets/images/
+    - assets/env/
     - assets/icons/
-    - assets/fonts/
 
 flutter_launcher_icons:
   android: true
