--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,16 +12,16 @@ dependencies:
   flutter:
     sdk: flutter
   
-  cupertino_icons: ^1.0.8
-  flutter_bloc: ^9.1.0
-  flutter_modular: ^6.3.4
+  cupertino_icons: 1.0.8
+  flutter_bloc: 9.1.0
+  flutter_modular: 6.3.4
   
-  supabase_flutter: ^2.9.0
-  flutter_dotenv: ^5.2.1
-  flavor_config: ^1.4.0
-  logger: ^2.5.0
-  stack_trace: ^1.12.1
-  equatable: ^2.0.7
+  supabase_flutter: 2.9.0
+  flutter_dotenv: 5.2.1
+  flavor_config: 1.4.0
+  logger: 2.5.0
+  stack_trace: 1.12.1
+  equatable: 2.0.7
 
 
   
@@ -31,12 +31,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
-  flutter_launcher_icons: ^0.14.3
-  flutter_native_splash: ^2.4.6
-  mock_supabase_http_client: ^0.0.3
-  build_runner: ^2.4.15
-  mutation_test: ^1.7.0
+  flutter_lints: 5.0.0
+  flutter_launcher_icons: 0.14.3
+  flutter_native_splash: 2.4.6
+  mock_supabase_http_client: 0.0.3
+  build_runner: 2.4.15
+  mutation_test: 1.7.0
 
 
 flutter:
