--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
     # Environment files
     - assets/env/
     - assets/icons/
+    - assets/images/
 
 flutter_launcher_icons:
   android: true
