--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,12 +50,27 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
-
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+        }
+    }
+
+    flavorDimensions += "env"
+
+    productFlavors {
+        fish {
+            dimension = "env"
+            applicationIdSuffix = ".fish"
+        }
+        dog {
+            dimension = "env"
+            applicationIdSuffix = ".dog"
+        }
+        prod {
+            dimension = "env"
         }
     }
 }
