Add food suffix to icons

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,13 +61,13 @@ android {
     flavorDimensions += "env"
 
     productFlavors {
-        fish {
+        fishfood {
             dimension = "env"
-            applicationIdSuffix = ".fish"
+            applicationIdSuffix = ".fishfood"
         }
-        dog {
+        dogfood {
             dimension = "env"
-            applicationIdSuffix = ".dog"
+            applicationIdSuffix = ".dogfood"
         }
         prod {
             dimension = "env"
