--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dev_dependencies:
   flutter_native_splash: 2.4.6
   build_runner: 2.4.15
   mutation_test: 1.7.0
+  mocktail: ^1.0.4
 
 
 flutter:
