Update mutation script

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -263,7 +263,7 @@ workflows:
       - name: Mutation Testing
         script: |
           echo "🧬 Cloning origin branch..."
-          git fetch origin $BASE_BRANCH
+          git fetch origin $BASE_BRANCH:refs/remotes/origin/$BASE_BRANCH
           BASE_COMMIT=$(git merge-base HEAD origin/$BASE_BRANCH)
           
           echo "🧬 Checking for changed mutation config files..."
