Update mutation script

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -267,7 +267,7 @@ workflows:
           BASE_COMMIT=$(git merge-base HEAD origin/$BASE_BRANCH)
           
           echo "🧬 Checking for changed mutation config files..."
-          CHANGED_FILES=$(git diff --name-only --diff-filter=d "$BASE_COMMIT" HEAD -- "test/mutations/*.xml")
+          CHANGED_FILES=$(git diff --name-only --diff-filter=d "$BASE_COMMIT" -- "test/mutations/*.xml")
           
           if [ -z "$CHANGED_FILES" ]; then
           echo "✅ No changed mutation config files detected. Skipping mutation tests."
