--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -262,10 +262,16 @@ workflows:
 
       - name: Mutation Testing
         script: |
+          echo "🧬 Cloning origin branch..."
+          git fetch --unshallow || true
+          git fetch origin $BASE_BRANCH:refs/remotes/origin/$BASE_BRANCH
           BASE_COMMIT=$(git merge-base HEAD origin/$BASE_BRANCH)
-          
+          if [ -z "$BASE_COMMIT" ]; then
+          echo "⚠️ Warning: Unable to determine base commit. Skipping mutation tests to avoid false negatives."
+          exit 0
+          fi
           echo "🧬 Checking for changed mutation config files..."
-          CHANGED_FILES=$(git diff --name-only --diff-filter=d "$BASE_COMMIT" HEAD -- "test/mutations/*.xml")
+          CHANGED_FILES=$(git diff --name-only --diff-filter=d "$BASE_COMMIT" -- "test/mutations/*.xml")
           
           if [ -z "$CHANGED_FILES" ]; then
           echo "✅ No changed mutation config files detected. Skipping mutation tests."
@@ -280,7 +286,7 @@ workflows:
 
       - name: Build Android Debug
         script: |
-          flutter build apk --debug
+          flutter build apk --flavor dogfood
 
     artifacts:
       - build/app/outputs/flutter-apk/*.apk
@@ -423,7 +429,7 @@ workflows:
 
       - name: Build Android Debug
         script: |
-          flutter build apk --debug
+          flutter build apk --flavor dogfood
 
     artifacts:
       - build/app/outputs/flutter-apk/*.apk
