--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -77,7 +77,7 @@ workflows:
           HOMEBREW_NO_AUTO_UPDATE=1 brew install lcov
           mkdir -p test-results
           flutter test $CHANGED_TESTS --coverage --machine > test-results/flutter.json
-
+          lcov --remove coverage/lcov.info '**/*.g.dart' '**/*.freezed.dart' -o coverage/lcov.info
           # Compute coverage
           if [ ! -f "coverage/lcov.info" ] || [ ! -s "coverage/lcov.info" ]; then
             echo "❌ Coverage file coverage/lcov.info is missing or empty."
@@ -196,7 +196,7 @@ workflows:
           sudo apt-get install -y lcov
           mkdir -p test-results
           flutter test test/units --coverage --machine > test-results/flutter.json
-          
+          lcov --remove coverage/lcov.info '**/*.g.dart' '**/*.freezed.dart' -o coverage/lcov.info
           # Compute coverage
           if [ ! -f "coverage/lcov.info" ] || [ ! -s "coverage/lcov.info" ]; then
             echo "❌ Coverage file coverage/lcov.info is missing or empty."
@@ -286,7 +286,7 @@ workflows:
 
       - name: Build Android Debug
         script: |
-          flutter build apk --flavor dogfood
+          flutter build apk --flavor fishfood
 
     artifacts:
       - build/app/outputs/flutter-apk/*.apk
@@ -349,7 +349,7 @@ workflows:
           HOMEBREW_NO_AUTO_UPDATE=1 brew install lcov
           mkdir -p test-results
           flutter test test/units --coverage --machine > test-results/flutter.json
-          
+          lcov --remove coverage/lcov.info '**/*.g.dart' '**/*.freezed.dart' -o coverage/lcov.info
           # Compute coverage
           if [ ! -f "coverage/lcov.info" ] || [ ! -s "coverage/lcov.info" ]; then
             echo "❌ Coverage file coverage/lcov.info is missing or empty."
@@ -429,7 +429,7 @@ workflows:
 
       - name: Build Android Debug
         script: |
-          flutter build apk --flavor dogfood
+          flutter build apk --flavor fishfood
 
     artifacts:
       - build/app/outputs/flutter-apk/*.apk
