--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   stack_trace: 1.12.1
   equatable: 2.0.7
   rxdart: 0.28.0
+  freezed_annotation: 3.0.0
+  json_annotation: 4.9.0
 
 
   
@@ -37,6 +39,8 @@ dev_dependencies:
   flutter_native_splash: 2.4.6
   build_runner: 2.4.15
   mutation_test: 1.7.0
+  freezed: 3.0.6
+  json_serializable: 6.9.5
 
 
 flutter:
