--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: 3.7.2
+  sdk: '3.8.0'
 
 dependencies:
   flutter:
@@ -41,6 +41,8 @@ dev_dependencies:
   mutation_test: 1.7.0
   freezed: 3.0.6
   json_serializable: 6.9.5
+  custom_lint: 0.7.5
+  ripplearc_flutter_lint: 0.1.0
 
 
 flutter:
